--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@
     @apply bg-gradient-to-r from-gray-200 to-gray-300 h-1/2 max-w-screen-lg
     rounded-3xl border-2 border-white px-12 mx-6
   }
+  .row-text{
+    @apply p-3
+  }
 }
 @layer base {
   [type="text"],
